--- a/provision/setup/handlers/main.yml
+++ b/provision/setup/handlers/main.yml
@@ -1,3 +1,3 @@
-- name: Restart Postgres
-  sudo: yes
-  service: name=postgresql state=restarted
+#- name: Restart Postgres
+#  sudo: yes
+#  service: name=postgresql state=restarted
