--- a/provision/setup/tasks/main.yml
+++ b/provision/setup/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Install packages
-  become: yes
+  become: true
   become_method: sudo
   apt: pkg={{ item }} state=installed update_cache=yes
   with_items:
@@ -13,27 +13,30 @@
       - python-setuptools
       - python-virtualenv
 
-- name: Allow password authentication for local socket users
-  become: yes
-  become_method: sudo
-  copy: src=pg_hba.conf dest=/etc/postgresql/9.1/main/pg_hba.conf force=yes
-  notify:
-      - Restart Postgres
+      # Zsh
+      - zsh
 
-- name: Create Database
-  become: yes
-  become_method: sudo
-  become_user: postgres
-  postgresql_db: name={{ db_name }}
-
-- name: Create User
-  become: yes
-  become_method: sudo
-  become_user: postgres
-  postgresql_user: name={{ db_user }} password={{ db_password }} state=present role_attr_flags=NOSUPERUSER,CREATEDB
-
-- name: Provide user with DB permissions
-  become: yes
-  become_method: sudo
-  become_user: postgres
-  postgresql_user: user={{ db_user }} db={{ db_name }} priv=ALL
+        #- name: Allow password authentication for local socket users
+        #  become: yes
+        #  become_method: sudo
+        #  copy: src=pg_hba.conf dest=/etc/postgresql/9.1/main/pg_hba.conf force=yes
+        #  notify:
+        #      - Restart Postgres
+        #
+        #- name: Create Database
+        #  become: yes
+        #  become_method: sudo
+        #  become_user: postgres
+        #  postgresql_db: name={{ db_name }}
+        #
+        #- name: Create User
+        #  become: yes
+        #  become_method: sudo
+        #  become_user: postgres
+        #  postgresql_user: name={{ db_user }} password={{ db_password }} state=present role_attr_flags=NOSUPERUSER,CREATEDB
+        #
+        #- name: Provide user with DB permissions
+        #  become: yes
+        #  become_method: sudo
+        #  become_user: postgres
+        #  postgresql_user: user={{ db_user }} db={{ db_name }} priv=ALL
