--- a/provision/setup/tasks/main.yml
+++ b/provision/setup/tasks/main.yml
@@ -38,8 +38,23 @@
 - name: Copy dotFiles into home
   command: cp -t ~/ ~/.dotFiles/.vimrc ~/.dotFiles/.zshrc
 
-  #- name: Install vundle plugins
-  #command: vim +PluginInstall +qall
-      
-  #- name: Compile autocomplete plugin
-  #command: python ~/.vim/bundle/YouCompleteMe/install.py
+- name: ensure repository key is installed
+  apt_key:
+    id: "58118E89F3A912897C070ADBF76221572C52609D"
+    keyserver: "hkp://p80.pool.sks-keyservers.net:80"
+    state: present
+
+- name: ensure docker registry is available
+  apt_repository: repo='deb https://apt.dockerproject.org/repo ubuntu-trusty main' state=present
+
+- name: ensure docker and dependencies are installed
+  apt: name=docker-engine update_cache=yes
+
+- service: name=docker state=restarted
+
+- name: start docker container (busybox)
+  docker_container:
+    name: mydata
+    image: busybox
+    volumes:
+      - /data
