--- a/provision/vagrant.yml
+++ b/provision/vagrant.yml
@@ -2,6 +2,9 @@
 - hosts: all
   become: True
   gather_facts: False
+  pre_tasks:
+    - name: 'install python2'
+      raw: sudo apt-get -y install python-simplejson
   roles:
       - setup
       - deploy
