--- a/provision/vagrant.yml
+++ b/provision/vagrant.yml
@@ -5,6 +5,11 @@
   pre_tasks:
     - name: 'install python2'
       raw: sudo apt-get -y install python-simplejson
+    - name: Gathering facts
+      setup:
   roles:
       - setup
       - deploy
+
+
+
